fix: margin spacing for intro in mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -176,7 +176,7 @@ main {
   }
 
   @include respond-max($bp-tab) {
-    margin: 9px auto 12px;
+    margin: 9px auto 16px;
     width: 85%;
   }
 }
@@ -291,7 +291,7 @@ main {
     @include respond-max($bp-mob) {
       font-size: 36px;
       letter-spacing: -1.38;
-      padding-bottom: 30px;
+      padding-bottom: 18px;
     }
   }
 
